<resources>
    <string name="app_name">Visit Indonesia</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="thanks">ALLAH SWT | RASULULLAH SWT || PRESIDEN RI || PAK HENDRA || KEDUA ORANG TUA</string>
    <string name="ind">
            Republik Indonesia (RI), biasa disebut Indonesia, adalah negara di Asia
        Tenggara yang dilintasi garis khatulistiwa dan berada di antara benua Asia
        dan Australia serta antara Samudra Pasifik dan Samudra Hindia. Indonesia
        adalah negara kepulauan terbesar di dunia yang terdiri dari 13.466 pulau,[6]
        nama alternatif yang biasa dipakai adalah Nusantara.[7] Dengan populasi lebih
        dari 258 juta jiwa pada tahun 2016,[8] Indonesia adalah negara berpenduduk
        terbesar keempat di dunia dan negara yang berpenduduk Muslim terbesar di dunia,
        dengan lebih dari 207 juta jiwa.[9] Bentuk pemerintahan Indonesia adalah republik,
        dengan Dewan Perwakilan Rakyat, Dewan Perwakilan Daerah dan Presiden yang
        dipilih secara langsung.
        Ibu kota negara Indonesia ialah Jakarta. Indonesia berbatasan darat dengan
        Malaysia di Pulau Kalimantan, dengan Papua Nugini di Pulau Papua dan dengan
        Timor Leste di Pulau Timor. Negara tetangga lainnya adalah Singapura, Filipina,
        Australia, dan wilayah persatuan Kepulauan Andaman dan Nikobar di India.
    </string>
    <string name="s1">Danau Maninjau</string>
    <string name="s2">Lembah Arau</string>
    <string name="s5">Gunung Sibayak</string>
    <string name="s6">Danau Toba</string>
    <string name="s9">Pantai Batu Batu Bertupang</string>
    <string name="sd1">
        Danau Maninjau terletak di kecamatan Tanjung Raya, Kabupaten Agam, provinsi Sumatera Barat. Danau
		ini tercatat sebagai danau terluas kesebelas di Indonesia.
		Sedangkan di Sumatera Barat, Maninjau merupakan danau terluas kedua setelah Danau Singkarak
		yang memiliki luas 129,69 km² yang berada di dua kabupaten yaitu Kabupaten Tanah Datar
		dan Kabupaten Solok. Penginapan yang terkenal yakni Nuansa Maninjau Resort, Pasir Panjang Permai, Maninjau Indah.
    </string>
    <string name="sd2">
        Lembah Harau adalah sebuah ngarai dekat kota Payakumbuh di kabupaten Limapuluh Koto, provinsi Sumatera Barat.
		Lembah Harau diapit dua bukit cadas terjal dengan ketinggian mencapai 150 meter. Lembah Harau .dilingkungi batu
		pasir yang terjal berwarna-warni, dengan ketinggian 100 sampai 500 meter. Topografi Cagar Alam Harau adalah berbukit-bukit
		dan bergelombang. Tinggi dari permukaan laut adalah 500 sampai 850 meter, bukit tersebut antara lain adalah Bukit Air Putih,
		Bukit Jambu, Bukit Singkarak dan Bukit Tarantang. Penginapan yang terkenal yakni abdi homestay, novi homestay lembah harau
    </string>
    <string name="sd5">
        Gunung Sibayak adalah kelas gunung berapi aktif yang memiliki uap panas. Selain itu, letusan yang terjadi beberapa waktu
		lalu cukup mengguncang bebatuan di puncak gunung. Kondisi yang cukup “tidak beraturan” pada bebatuan puncak nya ini,
		justru menjadi keunikan tersendiri yang menarik wisatawan yang senang menguji adrenalinnya untuk berusaha menaklukkan
		Gunung Sibayak hingga mencapai puncaknya. Pemandangan matahari terbit dari puncak gunung akan membuat anda terperangah.
		Kilau kemunculan sinar matahari akan menerpa wajah Anda memberikan suasana hangat, menggantikan hawa dingin yang semalaman
		menyelimuti perjalanan. Penginapan terkenal yakni Hotel Sibayak International, Mikie Holiday Resort.
    </string>
    <string name="sd6">
        Danau Toba adalah sebuah danau tekto-vulkanik dengan ukuran panjang 100 kilometer dan lebar 30 kilometer yang terletak di Provinsi Sumatera
		Utara, Indonesia. Danau ini merupakan danau terbesar di Indonesia dan Asia Tenggara. Di tengah danau ini terdapat sebuah pulau
		vulkanik bernama Pulau Samosir. Penginapan terkenal yakni Hotel Niagara Parapat , Danau Toba International Cottage Parapat , Inna Parapat.
    </string>
    <string name="sd9">
        Aceh juga memiliki banyak wisata pantai yang indah, salah satunya adalah Pantai Batu Bertupang. Pantai yang indah lainnya adalah
		Pantai Lampuuk, Pantai Terong Pantai Kuala Parek dan Pantai Pasir Saka.
    </string>
    <string name="sl1">Kecamatan Tanjung Raya, Kabupaten Agam, provinsi Sumatera Barat</string>
    <string name="sl2">kota Payakumbuh di kabupaten Limapuluh Koto, provinsi Sumatera Barat</string>
    <string name="sl5">Gunung Sibayak</string>
    <string name="sl6">Provinsi Sumatera Utara</string>
    <string name="sl9">Kotamadya Bengkulu, Propinsi Bengkulu</string>
    <string name="k1">Danau Sentarum</string>
    <string name="k2">Pantai Melawai</string>
    <string name="k3">Bukit Kelam</string>
    <string name="k4">Sungai Mahakam</string>
    <string name="k5">Muara Kuin</string>
    <string name="kd1">
            Danau Sentarum terletak di Kapuas Hulu, Kalimantan Barat Danau ini dipenuhi air selama 10 bulan setiap tahunnya, dan sisanya
		akan surut, membentuk kolam-kolam kecil yang berisi ikan-ikan kecil. Saat kemarau, Air Danau Sentarum memasok setengah dari aliran
		air Sungai Kapuas. Luas keseluruhan danau ini 132.000 hektarePenginapan Permata Bunda, Penginapan Aman Sentosa, Penginapan Marisa
    </string>
    <string name="kd2">
            Pantai Melawai terletak di Jl. Pelabuhan Semayang, Balikpapan Kota, Kota Balikpapan, Kalimantan Timur.Waktu yang tepat untuk
		mengunjungi salah satu tempat wisata di Balikpapan ini adalah saat sore hari menjelang malam. Pada saat itu, penjual makanan sudah ramai menggelar dagangannya. Anda bisa menikmati pemandangan matahari terbenam sambil bersantai menikmati makanan Anda dengan duduk lesehan di atas tikar yang telah disiapkan
		Bintang Hotel Balikpapan , Sentosa Guest House , Fortuna Guest House.
    </string>
    <string name="kd3">
            Bukit Kelam adalah gunung yang terletak di Kalimantan Barat. Gunung ini memiliki tanaman endemik kantong semar dari
		spesies Nepenthes clipeata.Gunung Kelam membentang dari barat ke timur dengan ketinggian 1.002 mdpl merupakan sebongkah
		batu raksasa (monolit). Tempat ini terletak 20 km dari kota Sintang dan sekitar 395 km dari Pontianak ibukota Kalimantan
		Barat. Kawasan Gunung Kelam berada di wilayah Kecamatan Kelam Permai kab. Sintang Kalimantan Barat. Tepatnya di Hutan wisata
		Bukit Kelam. Bukit Kelam berada di antara dua sungai besar yaitu Sungai Melawi dan Sungai Kapuas.
		Masyarakat di Kalimantan menyebut Gunung Kelam sebagai Bukit Kelam karena secara umum masyarakat setempat menyebut gunung sebagai
		"bukit raya". Untuk pendakian mencapai puncak dibutuhkan waktu 4-5 jam untuk naik dan 3-4 jam untuk turun.
    </string>
    <string name="kd4">
            Sungai Mahakam merupakan sungai terbesar yang membelah provinsi Kalimantan (Borneo) Timur. Alur sungai ini,
		sebagian besar mengitari wilayah Kabupaten Kutai Kartanegara, Kabupaten Kutai Barat, dan Kota Samarinda. Bagian hulu
		sungai ini melintasi Kabupaten Kutai Barat, sementara bagian hilirnya melintasi Kabupaten Kutai Kartanegara dan Kota Samarinda.
		Sungai Mahakam bisa dikatakan menjadi jantung kehidupan bagi sebagian besar masyarakat Kalimantan (Borneo) Timur.
		Penginapan terkenal yakni Harris hotel samarinda, swiss bel-hotel borneo samarinda, aston samarinda hotel
    </string>
    <string name="kd5">
            Pasar terapung muara kuin terletak di Banjarmasin. pasar terapung tradisional yang berada di atas sungai Barito di muara
		sungai Kuin, Banjarmasin, Kalimantan Selatan.Pasar Terapung Muara Kuin merupakan pusaka saujana Kota Banjarmasin.
		Para pedagang dan pembeli menggunakan jukung, sebutan perahu dalam bahasa Banjar. Pasar ini mulai setelah salat Subuh sampai
		selepas pukul tujuh pagi. Matahari terbit memantulkan cahaya di antara transaksi sayur-mayur dan hasil kebun dari kampung-kampung
		sepanjang aliran sungai Barito dan anak-anak sungainya.
    </string>
    <string name="kl1">Kapuas Hulu, Kalimantan Barat</string>
    <string name="kl2">Pelabuhan Semayang, Balikpapan Kota, Kota Balikpapan, Kalimantan Timur</string>
    <string name="kl3">Kalimantan Barat</string>
    <string name="kl4">Kalimantan Timur</string>
    <string name="kl5">Kecamatan Hanau, Danau Sembuluh, dan Seruyan Hilir di Kabupaten Seruyan, KalTeng</string>
    <string name="u1">Tana Toraja</string>
    <string name="u2">Bunaken</string>
    <string name="u3">Wakatobi</string>
    <string name="u4">Tentena</string>
    <string name="u5">Kep. Togean</string>
    <string name="ud1">
            Tana Toraja terletak di kabupaten di Provinsi Sulawesi Selatan.Suku Toraja yang mendiami daerah pegunungan dan mempertahankan
		gaya hidup yang khas dan masih menunjukkan gaya hidup Austronesia yang asli dan mirip dengan budaya Nias. Daerah ini merupakan salah
		satu objek wisata di Sulawesi Selatan.
		Penginapan terkenal yakni sahid toraja hotel, hotel indra toraja, toraja misiliana hotel.
    </string>
    <string name="ud2">
            Bunaken terletak di Teluk Manado. Taman laut Bunaken memiliki 20 titik penyelaman (dive spot) dengan kedalaman bervariasi
		hingga 1.344 meter. Dari 20 titik selam itu, 12 titik selam di antaranya berada di sekitar Pulau Bunaken. Dua belas titik
		penyelaman inilah yang paling kerap dikunjungi penyelam dan pecinta keindahan pemandangan bawah laut. Sebagian besar dari
		12 titik penyelaman di Pulau Bunaken berjajar dari bagian tenggara hingga bagian barat laut pulau tersebut. Di wilayah
		inilah terdapat underwater great walls, yang disebut juga hanging walls, atau dinding-dinding karang raksasa yang berdiri
		vertikal dan melengkung ke atas. Dinding karang ini juga menjadi sumber makanan bagi ikan-ikan di perairan sekitar Pulau Bunaken.
		Penginapan terkenal yakni Raja Laut Dive Resort, Bunaken Island Resort, Bastianos Dive Resort
    </string>
    <string name="ud3">
            sebuah KEPULAUAN yang berada di propinsi sulawesi tenggara (Sul-Tra) dan merupakan salah satu bagian dari daerah Buton.
		WAKATOBI terkenal sebagai salah satu tujuan wisata menarik diIndonesia khususnya dari aspek wisata bahari.
    </string>
    <string name="ud4">
            Tentena terletak di Kabupaten Poso, Sulawesi Tengah.Nama "Tentena" lebih dikenal oleh masyarakat di Sulawesi umumnya dan ini
		sudah berlangsung lama, sejak Tentena memiliki kejayaan di masa lalu, yang secara khusus berkaitan dengan pembentukan pasar
		tradisional mula-mula atau disebut dengan "Pasar Subuh", sehingga nama dari salah satu wilayah administratif kecamatan Pamona
		Puselemba dipakai sebagai identitas dari seluruh masyarakat yang bermukim pada wilayah kecamatan tersebut.
    </string>
    <string name="ud5">
            Kepulauan Togian ini dikenal kaya akan terumbu karang dan berbagai biota laut yang langka dan dilindungi. Beberapa aksi
		wisata yang dapat dilakukan di Kepulauan Togean antara lain: menyelam dan snorkelling di Pulau Kadidiri, memancing ,menjelajah
		alam hutan yang ada di dalam hutan yang ada di Pulau Malenge, serta mengunjungi gunung Colo di Pulau Una-una. Wisatawan juga bisa
		mengunjungi permukiman orang Bajo di Kabalutan.
    </string>
    <string name="ul1">Selatan Kabupaten Donggala dan Bagian Barat Kabupaten Poso</string>
    <string name="ul2">Teluk Manado</string>
    <string name="ul3">Propinsi Sulawesi Tenggara</string>
    <string name="ul4">Kabupaten Poso, Sulawesi Tengah</string>
    <string name="ul5">Kepulauan Togean</string>
    <string name="j1">Karimunjawa</string>
    <string name="j2">Borobudur</string>
    <string name="j3">Kawah Ijen</string>
    <string name="j4">Pangandaran</string>
    <string name="j5">Kep. Seribu</string>
    <string name="p1">Teluk Cendrawasih</string>
    <string name="p2">Raja Ampat</string>
    <string name="p3">Danau Sentani</string>
    <string name="p4">Lembah Baliem</string>
    <string name="p5">Pantai Bosnik</string>
</resources>