<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sumatra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="id.sch.smktelkom_mlg.project.xirpl503122131.visit_indonesia001.JawaActivity">
        <!--1-->
        <ImageButton
            android:id="@+id/buttonJ1"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/j1"
            android:contentDescription="@string/j1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/j1"
            android:textAlignment="center" />
        <!--2-->
        <ImageButton
            android:id="@+id/buttonJ2"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/j2"
            android:contentDescription="@string/j2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/j2"
            android:textAlignment="center" />
        <!--3-->
        <ImageButton
            android:id="@+id/buttonJ3"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/j3"
            android:contentDescription="@string/j3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/j3"
            android:textAlignment="center" />
        <!--4-->
        <ImageButton
            android:id="@+id/buttonJ4"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/j4"
            android:contentDescription="@string/j4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/j4"
            android:textAlignment="center" />
        <!--5-->
        <ImageButton
            android:id="@+id/buttonJ5"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/j5"
            android:contentDescription="@string/j5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/j5"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>