<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sumatra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="id.sch.smktelkom_mlg.project.xirpl503122131.visit_indonesia001.SumatraActivity">
        <!--1-->
        <ImageButton
            android:id="@+id/buttonS1"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/s1"
            android:contentDescription="@string/s1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/s1"
            android:textAlignment="center" />
        <!--2-->
        <ImageButton
            android:id="@+id/buttonS2"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/s2"
            android:contentDescription="@string/s2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/s2"
            android:textAlignment="center" />
        <!--3-->
        <ImageButton
            android:id="@+id/buttonS5"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/s5"
            android:contentDescription="@string/s5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/s5"
            android:textAlignment="center" />
        <!--4-->
        <ImageButton
            android:id="@+id/buttonS6"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/s6"
            android:contentDescription="@string/s6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/s6"
            android:textAlignment="center" />
        <!--5-->
        <ImageButton
            android:id="@+id/buttonS9"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/s9"
            android:contentDescription="@string/s9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/s9"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>
