<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sumatra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="id.sch.smktelkom_mlg.project.xirpl503122131.visit_indonesia001.KalimantanActivity">
        <!--1-->
        <ImageButton
            android:id="@+id/buttonK1"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/k1"
            android:contentDescription="@string/k1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/k1"
            android:textAlignment="center" />
        <!--2-->
        <ImageButton
            android:id="@+id/buttonK2"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/k2"
            android:contentDescription="@string/k2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/k2"
            android:textAlignment="center" />
        <!--3-->
        <ImageButton
            android:id="@+id/buttonK3"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/k3"
            android:contentDescription="@string/k3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/k3"
            android:textAlignment="center" />
        <!--4-->
        <ImageButton
            android:id="@+id/buttonK4"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/k4"
            android:contentDescription="@string/k4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/k4"
            android:textAlignment="center" />
        <!--5-->
        <ImageButton
            android:id="@+id/buttonK5"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/k5"
            android:contentDescription="@string/k5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/k5"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>